<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.harkanson.android.resume.MainActivity"
            tools:showIn="@layout/app_bar_main">

            <TextView
                android:id="@+id/tvHeader"
                style="@style/abc_header"
                android:text="@string/experience_caps"
                app:font="@{`arial_black.ttf`}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="@color/colorLightGrey"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/abc_section_header"
                        android:text="@string/lead_developer" />

                    <TextView
                        style="@style/abc_section_subheader"
                        android:text="@string/seatmeet"
                        android:paddingBottom="4dp" />

                </LinearLayout>

                <TextView
                    style="@style/abc_section_blue"
                    android:text="@string/seatmeet_date" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/seatmeet_description"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="@color/colorLightGrey"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/abc_section_header"
                        android:text="@string/lead_android_dev" />

                    <TextView
                        style="@style/abc_section_subheader"
                        android:text="@string/the_tennis_app"
                        android:paddingBottom="4dp" />

                </LinearLayout>

                <TextView
                    style="@style/abc_section_blue"
                    android:text="@string/the_tennis_app_date" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/the_tennis_app_description"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="@color/colorLightGrey"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/abc_section_header"
                        android:text="@string/prof_of_computer_science" />

                    <TextView
                        style="@style/abc_section_subheader"
                        android:text="@string/unlv"
                        android:paddingBottom="4dp" />

                </LinearLayout>

                <TextView
                    style="@style/abc_section_blue"
                    android:text="@string/unlv_date" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/unlv_description"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>
