<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.harkanson.android.resume.MainActivity"
            tools:showIn="@layout/app_bar_main">

            <TextView
                android:id="@+id/tvHeader"
                style="@style/abc_header"
                android:text="@string/hobbies_caps"
                app:font="@{`arial_black.ttf`}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="@color/colorLightGrey"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    style="@style/abc_section_header"
                    android:text="@string/music" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/music_description"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="@color/colorLightGrey"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    style="@style/abc_section_header"
                    android:text="@string/stem_fields" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/stem_fields_description"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="@color/colorLightGrey"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    style="@style/abc_section_header"
                    android:text="@string/multimedia" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/multimedia_description"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="@color/colorLightGrey"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    style="@style/abc_section_header"
                    android:text="@string/health" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/health_description"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>
