<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.harkanson.android.resume.MainActivity"
            tools:showIn="@layout/app_bar_main">

            <TextView
                android:id="@+id/tvTitle"
                style="@style/abc_title_first"
                android:layout_marginTop="-8sp"
                android:text="@string/russell_title"
                app:font="@{`arial_black.ttf`}" />

            <TextView
                android:id="@+id/tvSubtitle"
                style="@style/abc_title_last"
                android:layout_below="@+id/tvTitle"
                android:layout_marginTop="-18sp"
                android:text="@string/harkanson_title"
                app:font="@{`arial_black.ttf`}" />

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tvSubtitle"
                android:layout_centerHorizontal="true"
                android:paddingBottom="8dp">

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_centerVertical="true"
                    android:layout_margin="8dp"
                    android:layout_toLeftOf="@+id/ivPicture"
                    android:layout_toStartOf="@+id/ivPicture"
                    android:background="@color/colorOffBlack" />

                <ImageView
                    android:id="@+id/ivPicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal"
                    android:src="@android:drawable/sym_def_app_icon" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_centerVertical="true"
                    android:layout_margin="8dp"
                    android:layout_toEndOf="@+id/ivPicture"
                    android:layout_toRightOf="@+id/ivPicture"
                    android:background="@color/colorOffBlack" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/mission"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/relativeLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:background="@color/colorLightGrey"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tvHeader"
                    style="@style/abc_header_blue"
                    android:text="@string/software_engineer_caps"
                    app:font="@{`arial_black.ttf`}" />

                <TextView
                    android:id="@+id/tvMission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:text="@string/mission"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/mission"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:clickable="true"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    style="@style/abc_white_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/address_1" />

                <TextView
                    style="@style/abc_white_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/address_2" />

                <TextView
                    style="@style/abc_white_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/phone_number" />

                <TextView
                    style="@style/abc_white_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/email_address" />

            </LinearLayout>


        </RelativeLayout>
    </ScrollView>
</layout>
